--- a/src/scss/TopBar.scss
+++ b/src/scss/TopBar.scss
@@ -1,8 +1,7 @@
 #topbar {
     width: 100%;
     height: 100px;
-    margin-bottom: 20px;
-    background-color: #47fff0;
+    background-color: #8fbcff;
 
     display: flex;
     .title {
