--- a/src/scss/GridBoard.scss
+++ b/src/scss/GridBoard.scss
@@ -57,8 +57,39 @@
     background-color: #80B3FF;
   }
   .box.visited {
-    background: rgb(152, 255, 55);
+    background: rgb(63,94,251);
+    animation-name: visitedAnimation;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-delay: 0;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+    
   }
+  
+@keyframes visitedAnimation {
+  0% {
+    transform: scale(.3);
+    background-color: rgb(75, 202, 224);
+    border-radius: 100%;
+  }
+
+  50% {
+    background-color: rgba(50, 217, 17, 0.75);
+  }
+
+  75% {
+    transform: scale(1.2);
+    background-color: rgba(180, 238, 23, 0.75)
+  }
+
+  100% {
+    transform: scale(1.0);
+    background-color: rgb(40, 247, 219);
+  }
+}
   .box.path {
     background: rgb(255, 55, 55);
   }
