--- a/src/scss/Controller.scss
+++ b/src/scss/Controller.scss
@@ -9,7 +9,7 @@
         display: flex;
     }
     .button-wrap {
-        .button {
+        .button, .select-container {
             width: 100px;
             height: 50px;
             font-size: 18px;
@@ -50,5 +50,8 @@
             justify-content: center;
             align-self: center;
         }
+    }
+    .select-container {
+        border: 2px solid black;
     }
 }
