--- a/src/scss/Controller.scss
+++ b/src/scss/Controller.scss
@@ -1,57 +1,56 @@
 #controller {
-    margin: 24px auto;
+  margin: 24px auto;
+  display: flex;
+  justify-content: center;
+  .left {
     display: flex;
-    justify-content: center;
-    .left {
-        display: flex;
-    }
-    .right {
-        display: flex;
-    }
-    .button-wrap {
-        .button, .select-container {
-            width: 100px;
-            height: 50px;
-            font-size: 18px;
-            border-radius: 0px;
-            margin: 2px;
-            background-color: #ffffff;
-            :focus {
-                outline: unset;
-            }
-            .start {
-
-            }
-            .stop {
-
-            }
-        }
-    }
-    .counter {
-        display: flex;
-    }
-    .counter-box{
-        width: 100px;
-        height: 50px;
-        border: 3px solid red;
-        box-sizing: border-box;
-        margin: 2px;
-        display: flex;
-        font-weight: bold;
-        .elapsed-time {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-self: center;
-        }
-        .move-counter {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-self: center;
-        }
-    }
+  }
+  .right {
+    display: flex;
+  }
+  .button-wrap {
+    .button,
     .select-container {
-        border: 2px solid black;
+      width: 100px;
+      height: 50px;
+      font-size: 18px;
+      border-radius: 0px;
+      margin: 2px;
+      background-color: #ffffff;
+      :focus {
+        outline: unset;
+      }
+      .start {
+      }
+      .stop {
+      }
     }
+  }
+  .counter {
+    display: flex;
+  }
+  .counter-box {
+    width: 100px;
+    height: 50px;
+    border: 3px solid red;
+    box-sizing: border-box;
+    margin: 2px;
+    display: flex;
+    font-weight: bold;
+    .elapsed-time {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-self: center;
+    }
+    .move-counter {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-self: center;
+    }
+  }
+  .select-container {
+    border: 2px solid black;
+  }
 }
